--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-white text-gray-900 font-sans">
 
     <nav class="flex justify-between items-center p-8 max-w-6xl mx-auto">
-        <div class="text-xl font-bold">TonNom</div>
+        <div class="text-xl font-bold">Meriem Louizini</div>
         <ul class="flex space-x-6 font-medium text-gray-600">
             <li class="text-indigo-600">Home</li>
             <li>About</li>
