--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="flex-1 md:ml-20 text-center md:text-left">
-            <h1 class="text-5xl md:text-6xl font-extrabold mb-4">Salut, je suis <span class="text-emerald-600 block mt-2">Ton Nom</span></h1>
-            <p class="text-xl md:text-2xl text-gray-500 mb-8">À la recherche d'un stage en [Ton Domaine]</p>
+            <h1 class="text-5xl md:text-6xl font-extrabold mb-4">Salut, je suis <span class="text-emerald-600 block mt-2">Meriem Louizini</span></h1>
+            <p class="text-xl md:text-2xl text-gray-500 mb-8">À la recherche d'un stage en informatique </p>
             <a href="mailto:tonemail@exemple.com" class="bg-emerald-600 text-white px-8 py-4 rounded-lg font-bold hover:bg-emerald-700 transition inline-flex items-center">
                 Contactez-moi <i class="fas fa-paper-plane ml-2"></i>
             </a>
@@ -37,7 +37,7 @@
 
         <div class="mt-12 md:mt-0 font-bold text-white text-center">
             <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-emerald-500 shadow-2xl mx-auto relative bg-gray-100">
-                <img src="ta-photo.jpg" alt="Photo de moi" class="w-full h-full object-cover relative z-10">
+                <img src="Page.jpg" alt="Photo de moi" class="w-full h-full object-cover relative z-10">
             </div>
         </div>
     </main>
