--- a/index.html
+++ b/index.html
@@ -1,174 +1,185 @@
 <!DOCTYPE html>
-<html lang="fr" class="scroll-smooth">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meriem LOUIZINI | Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #f8fafc; }
-        .glass { background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2); }
-        .text-gradient { background: linear-gradient(to right, #059669, #10b981); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        .bg-gradient-green { background: linear-gradient(135deg, #059669 0%, #10b981 100%); }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meriem Louizini | Portfolio</title>
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .gradient-text {
+      background: linear-gradient(90deg,#10b981,#22d3ee);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  </style>
 </head>
-<body class="text-slate-800">
 
-    <nav class="fixed w-full z-50 px-6 py-4">
-        <div class="max-w-6xl mx-auto glass rounded-2xl px-6 py-3 flex justify-between items-center shadow-lg">
-            <span class="text-2xl font-extrabold text-emerald-600 tracking-tighter">ML.</span>
-            <div class="hidden md:flex space-x-8 font-semibold text-sm uppercase tracking-widest">
-                <a href="#home" class="hover:text-emerald-600 transition">Accueil</a>
-                <a href="#about" class="hover:text-emerald-600 transition">Parcours</a>
-                <a href="#projects" class="hover:text-emerald-600 transition">Projets</a>
-                <a href="#contact" class="hover:text-emerald-600 transition">Contact</a>
-            </div>
-            <a href="mailto:louizmeriem1@gmail.com" class="bg-gradient-green text-white px-5 py-2 rounded-xl text-sm font-bold shadow-md hover:scale-105 transition">Me Contacter</a>
-        </div>
-    </nav>
+<body class="bg-slate-950 text-slate-100">
 
-    <section id="home" class="min-h-screen flex items-center pt-20 px-6">
-        <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-            <div data-aos="fade-right" data-aos-duration="1000">
-                <h2 class="text-emerald-600 font-bold mb-4 tracking-widest uppercase italic">Future Diplômée MIAGE</h2>
-                <h1 class="text-6xl font-extrabold leading-tight mb-6">
-                    Je suis <span class="text-gradient">Meriem LOUIZINI</span><br>
-                    <span id="typewriter" class="text-slate-700"></span>
-                </h1>
-                <p class="text-lg text-slate-500 mb-8 max-w-lg leading-relaxed">
-                    Actuellement en Licence 3 Informatique à l'Université de Haute Alsace. Passionnée par le lien entre informatique et gestion.
-                </p>
-                <div class="flex space-x-4">
-                    <a href="#projects" class="bg-slate-900 text-white px-8 py-4 rounded-2xl font-bold hover:bg-slate-800 transition shadow-xl">Mes Projets</a>
-                    <a href="CVStage.pdf" target="_blank" class="border-2 border-emerald-600 text-emerald-600 px-8 py-4 rounded-2xl font-bold hover:bg-emerald-50 transition">Mon CV</a>
-                </div>
-            </div>
-            <div class="relative flex justify-center" data-aos="zoom-in" data-aos-duration="1200">
-                <div class="absolute inset-0 bg-emerald-200 rounded-full blur-3xl opacity-30 animate-pulse"></div>
-                <img src="photo.jpg" alt="Meriem Louizini" class="relative w-80 h-80 md:w-[420px] md:h-[420px] object-cover rounded-[3rem] shadow-2xl border-8 border-white">
-            </div>
-        </div>
-    </section>
+<!-- NAV -->
+<nav class="fixed w-full z-50 bg-slate-950/80 backdrop-blur border-b border-slate-800">
+  <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+    <span class="font-extrabold text-xl gradient-text">ML.</span>
+    <div class="space-x-6 text-sm hidden md:block">
+      <a href="#about" class="hover:text-emerald-400">À propos</a>
+      <a href="#skills" class="hover:text-emerald-400">Compétences</a>
+      <a href="#projects" class="hover:text-emerald-400">Projets</a>
+      <a href="#contact" class="hover:text-emerald-400">Contact</a>
+    </div>
+  </div>
+</nav>
 
-    <section id="about" class="py-24 px-6 bg-white">
-        <div class="max-w-6xl mx-auto">
-            <div class="text-center mb-16">
-                <h2 class="text-4xl font-extrabold mb-4">Qualifications</h2>
-                <p class="text-slate-400">Mon parcours académique et professionnel</p>
-            </div>
+<!-- HERO -->
+<section class="min-h-screen flex items-center px-6 pt-20">
+  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+    <div data-aos="fade-right">
+      <p class="uppercase tracking-widest text-emerald-400 text-sm mb-4">
+        Étudiante en Informatique • Future MIAGE
+      </p>
+      <h1 class="text-5xl font-extrabold leading-tight mb-6">
+        Meriem <span class="gradient-text">Louizini</span>
+      </h1>
+      <p class="text-slate-400 text-lg mb-8 max-w-xl">
+        Je conçois des solutions informatiques concrètes en reliant
+        <strong>développement</strong>, <strong>données</strong> et
+        <strong>compréhension métier</strong>.
+        À la recherche d’un <strong>stage à partir de mai</strong>.
+      </p>
 
-            <div class="grid md:grid-cols-2 gap-16">
-                <div data-aos="fade-right">
-                    <h3 class="text-2xl font-bold mb-8 flex items-center text-emerald-700">
-                        <i class="fas fa-graduation-cap mr-4"></i> Éducation
-                    </h3>
-                    <div class="space-y-10 border-l-2 border-emerald-100 pl-8 relative">
-                        <div class="relative">
-                            <div class="absolute -left-[41px] top-1 w-5 h-5 bg-emerald-600 rounded-full border-4 border-white shadow"></div>
-                            <h4 class="font-bold text-lg leading-tight">Licence 3 en informatique</h4>
-                            <p class="text-emerald-600 text-sm font-bold">2025 - Présent</p>
-                            <p class="text-slate-500 text-sm">Université de Haute Alsace, Mulhouse</p>
-                        </div>
-                        <div class="relative">
-                            <div class="absolute -left-[41px] top-1 w-5 h-5 bg-emerald-400 rounded-full border-4 border-white shadow"></div>
-                            <h4 class="font-bold text-lg leading-tight">Master 1 Système Informatique Intelligent</h4>
-                            <p class="text-emerald-600 text-sm font-bold">2024 - 2025</p>
-                            <p class="text-slate-500 text-sm italic">Université Mouloud Mammeri, Tizi Ouzou</p>
-                        </div>
-                        <div class="relative">
-                            <div class="absolute -left-[41px] top-1 w-5 h-5 bg-emerald-300 rounded-full border-4 border-white shadow"></div>
-                            <h4 class="font-bold text-lg leading-tight">Licence en informatique</h4>
-                            <p class="text-emerald-600 text-sm font-bold">2021 - 2024</p>
-                            <p class="text-slate-500 text-sm">Université Mouloud Mammeri, Tizi Ouzou</p>
-                        </div>
-                        <div class="relative">
-                            <div class="absolute -left-[41px] top-1 w-5 h-5 bg-slate-200 rounded-full border-4 border-white shadow"></div>
-                            <h4 class="font-bold text-lg leading-tight">Baccalauréat Sciences Expérimentales</h4>
-                            <p class="text-slate-400 text-sm font-bold">2020 - 2021</p>
-                            <p class="text-slate-400 text-sm">Lycée Krim Belkacem, Tizi Ouzou</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="flex gap-4">
+        <a href="#projects" class="px-8 py-4 bg-emerald-500 text-slate-900 rounded-xl font-bold hover:bg-emerald-400 transition">
+          Voir mes projets
+        </a>
+        <a href="CVStage.pdf" target="_blank" class="px-8 py-4 border border-emerald-400 rounded-xl font-bold hover:bg-emerald-400/10 transition">
+          Télécharger mon CV
+        </a>
+      </div>
+    </div>
 
-                <div data-aos="fade-left">
-                    <h3 class="text-2xl font-bold mb-8 flex items-center text-emerald-700">
-                        <i class="fas fa-briefcase mr-4"></i> Expérience Professionnelle
-                    </h3>
-                    <div class="glass p-8 rounded-3xl border-t-4 border-emerald-500 shadow-xl mb-6">
-                        <div class="flex justify-between items-start mb-4">
-                            <div>
-                                <h4 class="font-black text-xl">Stage Développeur Full-Stack</h4>
-                                <p class="text-emerald-600 font-bold">CFP Kerrad Rachid, Tizi-Ouzou</p>
-                            </div>
-                            <span class="bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg text-xs font-bold uppercase">2023 - 2024</span>
-                        </div>
-                        <p class="text-slate-600 text-sm leading-relaxed mb-4">
-                            Conception et réalisation d'une application web pour la gestion de l'accueil du centre.
-                        </p>
-                        <ul class="text-xs text-slate-500 space-y-2 italic">
-                            <li>• Analyse des besoins & Modélisation UML</li>
-                            <li>• Front-end : HTML, CSS, JavaScript</li>
-                            <li>• Back-end : PHP, MySQL</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div data-aos="zoom-in" class="flex justify-center">
+      <img src="photo.jpg" alt="Meriem Louizini"
+           class="w-80 h-80 object-cover rounded-3xl border-4 border-slate-800 shadow-2xl"/>
+    </div>
+  </div>
+</section>
 
-    <section id="projects" class="py-24 bg-slate-900 text-white px-6">
-        <div class="max-w-6xl mx-auto text-center mb-16">
-            <h2 class="text-4xl font-extrabold mb-4">Mes Projets Académiques</h2>
-            <div class="w-16 h-1 bg-emerald-500 mx-auto rounded-full"></div>
-        </div>
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="bg-slate-800 p-8 rounded-3xl border border-slate-700 hover:border-emerald-500 transition duration-500" data-aos="fade-up">
-                <i class="fas fa-brain text-emerald-500 text-4xl mb-6"></i>
-                <h4 class="text-xl font-bold mb-3">Intelligence Artificielle</h4>
-                <p class="text-slate-400 text-sm mb-4">Générateur-discriminateur (GAN) et Reconnaissance faciale (CNN) avec Python.</p>
-                <div class="flex gap-2"><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">Deep Learning</span><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">TensorFlow</span></div>
-            </div>
-            <div class="bg-slate-800 p-8 rounded-3xl border border-slate-700 hover:border-emerald-500 transition duration-500" data-aos="fade-up" data-aos-delay="100">
-                <i class="fas fa-satellite-dish text-emerald-500 text-4xl mb-6"></i>
-                <h4 class="text-xl font-bold mb-3">IoT & Systèmes</h4>
-                <p class="text-slate-400 text-sm mb-4">Solution d'éclairage public intelligent avec Node-RED, ESP32 et Raspberry Pi.</p>
-                <div class="flex gap-2"><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">Embedded</span><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">Node-RED</span></div>
-            </div>
-            <div class="bg-slate-800 p-8 rounded-3xl border border-slate-700 hover:border-emerald-500 transition duration-500" data-aos="fade-up" data-aos-delay="200">
-                <i class="fas fa-code text-emerald-500 text-4xl mb-6"></i>
-                <h4 class="text-xl font-bold mb-3">Web Service REST</h4>
-                <p class="text-slate-400 text-sm mb-4">Développement d'un système de gestion de cabinet médical en Java et SQL.</p>
-                <div class="flex gap-2"><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">Java</span><span class="bg-slate-700 px-2 py-1 rounded text-[10px]">API REST</span></div>
-            </div>
-        </div>
-    </section>
+<!-- ABOUT -->
+<section id="about" class="py-24 px-6 bg-slate-900">
+  <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+    <h2 class="text-4xl font-extrabold mb-6 gradient-text">À propos</h2>
+    <p class="text-slate-400 text-lg leading-relaxed">
+      Étudiante en Licence 3 Informatique à l’Université de Haute-Alsace,
+      je m’intéresse particulièrement au lien entre <strong>informatique</strong>,
+      <strong>gestion</strong> et <strong>innovation</strong>.
+      J’aime comprendre un besoin, le structurer techniquement et le transformer
+      en solution utile, fiable et évolutive.
+    </p>
+  </div>
+</section>
 
-    <footer id="contact" class="py-16 bg-white border-t border-slate-100 text-center">
-        <h3 class="text-3xl font-black mb-6 text-gradient italic">Meriem LOUIZINI</h3>
-        <div class="flex justify-center space-x-10 text-xl text-slate-400 mb-8">
-            <a href="https://github.com" class="hover:text-emerald-600"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com" class="hover:text-emerald-600"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-600"><i class="fas fa-envelope"></i></a>
-        </div>
-        <p class="text-slate-400 text-xs uppercase tracking-widest">© 2026 • Basé à Mulhouse, France</p>
-    </footer>
+<!-- SKILLS -->
+<section id="skills" class="py-24 px-6">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-4xl font-extrabold text-center mb-16 gradient-text">Compétences</h2>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({ once: true });
-        const text = "Développeuse Full-Stack & Experte en IA";
-        let i = 0;
-        function typeWriter() {
-            if (i < text.length) {
-                document.getElementById("typewriter").innerHTML += text.charAt(i);
-                i++;
-                setTimeout(typeWriter, 100);
-            }
-        }
-        window.onload = typeWriter;
-    </script>
+    <div class="grid md:grid-cols-3 gap-8">
+
+      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up">
+        <h3 class="font-bold text-xl mb-4">Développement</h3>
+        <p class="text-slate-400 text-sm">
+          HTML, CSS, JavaScript<br>
+          PHP, MySQL, Java, C++<br>
+          API REST, WAMP
+        </p>
+      </div>
+
+      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="font-bold text-xl mb-4">IA & Data</h3>
+        <p class="text-slate-400 text-sm">
+          Machine Learning, Deep Learning<br>
+          Scikit-learn, TensorFlow<br>
+          CNN, GAN, Big Data (MapReduce, YARN)
+        </p>
+      </div>
+
+      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="font-bold text-xl mb-4">Gestion & MIAGE</h3>
+        <p class="text-slate-400 text-sm">
+          Économie générale<br>
+          Modèles comptables<br>
+          Travail en équipe & organisation de projet
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="py-24 px-6 bg-slate-900">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-4xl font-extrabold text-center mb-16 gradient-text">Projets clés</h2>
+
+    <div class="grid md:grid-cols-3 gap-8">
+
+      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up">
+        <h4 class="font-bold mb-2">Application Full-Stack</h4>
+        <p class="text-sm text-slate-400">
+          Gestion de l’accueil d’un centre de formation.
+          Analyse des besoins, UML, front-end et back-end.
+        </p>
+      </div>
+
+      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up" data-aos-delay="100">
+        <h4 class="font-bold mb-2">IA – CNN & GAN</h4>
+        <p class="text-sm text-slate-400">
+          Reconnaissance faciale et génération d’images
+          avec Python et Deep Learning.
+        </p>
+      </div>
+
+      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up" data-aos-delay="200">
+        <h4 class="font-bold mb-2">IoT Intelligent</h4>
+        <p class="text-sm text-slate-400">
+          Éclairage public intelligent avec Node-RED,
+          ESP32 et Raspberry Pi.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<footer id="contact" class="py-16 text-center border-t border-slate-800">
+  <h3 class="text-3xl font-extrabold mb-4 gradient-text">Discutons</h3>
+  <p class="text-slate-400 mb-8">Ouverte aux opportunités de stage et d’alternance MIAGE</p>
+
+  <div class="flex justify-center gap-8 text-2xl">
+    <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-400"><i class="fas fa-envelope"></i></a>
+    <a href="https://github.com/" target="_blank" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
+    <a href="https://linkedin.com/" target="_blank" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
+  </div>
+
+  <p class="text-xs text-slate-600 mt-8">© 2026 • Meriem Louizini • Mulhouse</p>
+</footer>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init({ once: true });</script>
+
 </body>
 </html>
+
