--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meriem Louizini | Portfolio</title>
 
-  <!-- Favicon -->
+  <!-- Favicon (icône onglet) -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <!-- Tailwind -->
+  <!-- Fonts & Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-  <!-- AOS -->
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <style>
-    body { font-family: 'Inter', sans-serif; }
-    .gradient-text {
-      background: linear-gradient(90deg,#10b981,#22d3ee);
+    body {
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      background-color: #020617;
+      color: #e5e7eb;
+    }
+    .glass {
+      background: rgba(255,255,255,0.05);
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+    .text-gradient {
+      background: linear-gradient(to right, #22c55e, #14b8a6);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
   </style>
 </head>
 
-<body class="bg-slate-950 text-slate-100">
+<body>
 
 <!-- NAV -->
-<nav class="fixed w-full z-50 bg-slate-950/80 backdrop-blur border-b border-slate-800">
-  <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-    <span class="font-extrabold text-xl gradient-text">ML.</span>
-    <div class="space-x-6 text-sm hidden md:block">
+<nav class="fixed w-full z-50 px-6 py-4">
+  <div class="max-w-6xl mx-auto glass rounded-2xl px-6 py-3 flex justify-between items-center">
+    <span class="text-2xl font-extrabold text-emerald-400">ML.</span>
+    <div class="hidden md:flex gap-8 text-sm font-semibold">
+      <a href="#home" class="hover:text-emerald-400">Accueil</a>
       <a href="#about" class="hover:text-emerald-400">À propos</a>
       <a href="#skills" class="hover:text-emerald-400">Compétences</a>
       <a href="#projects" class="hover:text-emerald-400">Projets</a>
@@ -46,153 +50,106 @@
 </nav>
 
 <!-- HERO -->
-<section class="min-h-screen flex items-center pt-24 px-6">
+<section id="home" class="min-h-screen flex items-center px-6 pt-24">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    
     <div data-aos="fade-right">
-      <p class="uppercase tracking-widest text-emerald-400 text-sm mb-4">
-        Licence 3 Informatique • Future MIAGE
-      </p>
       <h1 class="text-5xl font-extrabold mb-6">
-        Meriem <span class="gradient-text">Louizini</span>
+        Bonjour, je suis <span class="text-gradient">Meriem Louizini</span>
       </h1>
-      <p class="text-slate-400 text-lg mb-8 max-w-xl">
-        Je transforme des besoins concrets en solutions informatiques utiles,
-        en reliant développement, données et compréhension métier.
-        <br><strong>Stage recherché à partir de mai.</strong>
+      <p class="text-slate-400 text-lg mb-8">
+        Étudiante en Licence 3 Informatique à Mulhouse.  
+        Passionnée par le développement, l’IA et les systèmes concrets orientés métier.
       </p>
-
       <div class="flex gap-4">
-        <a href="#projects" class="px-8 py-4 bg-emerald-500 text-slate-900 rounded-xl font-bold hover:bg-emerald-400 transition">
+        <a href="#projects" class="bg-emerald-500 text-slate-900 px-6 py-3 rounded-xl font-bold hover:scale-105 transition">
           Voir mes projets
         </a>
-        <a href="CVStage.pdf" target="_blank" class="px-8 py-4 border border-emerald-400 rounded-xl font-bold hover:bg-emerald-400/10 transition">
-          Mon CV
+        <a href="CVStage.pdf" target="_blank" class="border border-emerald-500 px-6 py-3 rounded-xl hover:bg-emerald-500 hover:text-slate-900 transition">
+          Télécharger mon CV
         </a>
       </div>
     </div>
 
-    <div data-aos="zoom-in">
-      <img src="assets/images/hero.jpg"
-           alt="Meriem Louizini"
-           class="rounded-3xl shadow-2xl border border-slate-800">
+    <div class="flex justify-center" data-aos="zoom-in">
+      <img src="page.jpg" alt="Meriem Louizini"
+           class="w-80 h-80 object-cover rounded-3xl shadow-2xl border border-slate-700">
     </div>
-
   </div>
 </section>
 
 <!-- ABOUT -->
 <section id="about" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    
-    <img src="assets/images/about.jpg"
-         alt="À propos"
-         class="rounded-3xl shadow-xl border border-slate-800"
-         data-aos="fade-right">
+    <img src="about.jpg" class="rounded-3xl shadow-xl" data-aos="fade-right">
 
     <div data-aos="fade-left">
-      <h2 class="text-4xl font-extrabold mb-6 gradient-text">À propos</h2>
-      <p class="text-slate-400 text-lg leading-relaxed">
-        Étudiante en Licence 3 Informatique à l’Université de Haute-Alsace,
-        je m’intéresse au lien entre informatique, gestion et innovation.
-        J’aime analyser un besoin, structurer une solution et la concrétiser
-        à travers des projets utiles et bien pensés.
+      <h2 class="text-4xl font-extrabold mb-6 text-gradient">À propos de moi</h2>
+      <p class="text-slate-400 leading-relaxed">
+        J’aime comprendre les besoins, structurer une solution et la transformer
+        en application utile. Sérieuse, curieuse et collaborative, je vise un
+        Master MIAGE pour évoluer à l’interface entre informatique, gestion et entreprise.
       </p>
     </div>
-
   </div>
 </section>
 
 <!-- SKILLS -->
 <section id="skills" class="py-24 px-6">
-  <div class="max-w-6xl mx-auto">
-    <h2 class="text-4xl font-extrabold text-center mb-16 gradient-text">Compétences</h2>
+  <div class="max-w-6xl mx-auto text-center mb-16">
+    <h2 class="text-4xl font-extrabold text-gradient">Compétences</h2>
+  </div>
 
-    <div class="grid md:grid-cols-3 gap-8">
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up">
+      <img src="DEV.jpg" class="rounded-xl mb-4">
+      <h3 class="font-bold text-xl mb-2">Développement</h3>
+      <p class="text-slate-400 text-sm">HTML, CSS, JavaScript, PHP, Java, SQL</p>
+    </div>
 
-      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up">
-        <img src="assets/images/dev.jpg" class="rounded-xl mb-4">
-        <h3 class="font-bold text-xl mb-2">Développement</h3>
-        <p class="text-slate-400 text-sm">
-          HTML, CSS, JavaScript<br>
-          PHP, Java, C++<br>
-          MySQL, API REST
-        </p>
-      </div>
+    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="100">
+      <img src="IA.jpg" class="rounded-xl mb-4">
+      <h3 class="font-bold text-xl mb-2">IA & Data</h3>
+      <p class="text-slate-400 text-sm">CNN, GAN, Python, Big Data, MapReduce</p>
+    </div>
 
-      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up" data-aos-delay="100">
-        <img src="assets/images/ai.jpg" class="rounded-xl mb-4">
-        <h3 class="font-bold text-xl mb-2">IA & Data</h3>
-        <p class="text-slate-400 text-sm">
-          Machine Learning, Deep Learning<br>
-          CNN, GAN<br>
-          Big Data (MapReduce, YARN)
-        </p>
-      </div>
-
-      <div class="bg-slate-900 p-8 rounded-2xl" data-aos="fade-up" data-aos-delay="200">
-        <img src="assets/images/miage.jpg" class="rounded-xl mb-4">
-        <h3 class="font-bold text-xl mb-2">MIAGE & Gestion</h3>
-        <p class="text-slate-400 text-sm">
-          Économie générale<br>
-          Modèles comptables<br>
-          Travail en équipe & organisation
-        </p>
-      </div>
-
+    <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="200">
+      <img src="Miage.jpg" class="rounded-xl mb-4">
+      <h3 class="font-bold text-xl mb-2">MIAGE & Gestion</h3>
+      <p class="text-slate-400 text-sm">Analyse des besoins, logique métier, collaboration</p>
     </div>
   </div>
 </section>
 
 <!-- PROJECTS -->
 <section id="projects" class="py-24 px-6 bg-slate-900">
-  <div class="max-w-6xl mx-auto">
-    <h2 class="text-4xl font-extrabold text-center mb-16 gradient-text">Projets</h2>
+  <div class="max-w-6xl mx-auto text-center mb-16">
+    <h2 class="text-4xl font-extrabold text-gradient">Projets clés</h2>
+  </div>
 
-    <div class="grid md:grid-cols-3 gap-8">
-
-      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up">
-        <img src="assets/images/project-web.jpg" class="rounded-lg mb-4">
-        <h4 class="font-bold mb-2">Application Full-Stack</h4>
-        <p class="text-sm text-slate-400">
-          Gestion d’accueil d’un centre de formation (HTML, CSS, JS, PHP, MySQL).
-        </p>
-      </div>
-
-      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up" data-aos-delay="100">
-        <img src="assets/images/project-ai.jpg" class="rounded-lg mb-4">
-        <h4 class="font-bold mb-2">IA – CNN & GAN</h4>
-        <p class="text-sm text-slate-400">
-          Reconnaissance faciale et génération d’images en Python.
-        </p>
-      </div>
-
-      <div class="bg-slate-800 p-6 rounded-xl" data-aos="fade-up" data-aos-delay="200">
-        <img src="assets/images/project-iot.jpg" class="rounded-lg mb-4">
-        <h4 class="font-bold mb-2">IoT Intelligent</h4>
-        <p class="text-sm text-slate-400">
-          Éclairage public intelligent avec Node-RED, ESP32 et Raspberry Pi.
-        </p>
-      </div>
-
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+    <div class="glass p-6 rounded-2xl">
+      <h3 class="font-bold mb-2">Application Full-Stack</h3>
+      <p class="text-slate-400 text-sm">Gestion d’accueil – HTML, CSS, JS, PHP, MySQL</p>
+    </div>
+    <div class="glass p-6 rounded-2xl">
+      <h3 class="font-bold mb-2">IA – Reconnaissance Faciale</h3>
+      <p class="text-slate-400 text-sm">CNN & GAN – Python</p>
+    </div>
+    <div class="glass p-6 rounded-2xl">
+      <h3 class="font-bold mb-2">IoT Intelligent</h3>
+      <p class="text-slate-400 text-sm">Node-RED, ESP32, Raspberry Pi</p>
     </div>
   </div>
 </section>
 
 <!-- CONTACT -->
-<footer id="contact" class="py-16 text-center border-t border-slate-800">
-  <h3 class="text-3xl font-extrabold mb-4 gradient-text">Contact</h3>
-  <p class="text-slate-400 mb-8">
-    Stage à partir de mai • Ouverte à une alternance MIAGE
-  </p>
-
-  <div class="flex justify-center gap-8 text-2xl">
+<footer id="contact" class="py-16 text-center">
+  <h3 class="text-3xl font-extrabold text-gradient mb-6">Contact</h3>
+  <div class="flex justify-center gap-8 text-xl">
     <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-400"><i class="fas fa-envelope"></i></a>
-    <a href="https://github.com/" target="_blank" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com/" target="_blank" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
+    <a href="https://linkedin.com" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
   </div>
-
-  <p class="text-xs text-slate-600 mt-8">© 2026 • Meriem Louizini • Mulhouse</p>
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -200,5 +157,3 @@
 
 </body>
 </html>
-
-
