--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meriem Louizini | Portfolio</title>
 
-  <!-- Favicon (icône onglet) -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  
 
   <!-- Fonts & Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -71,7 +70,7 @@
     </div>
 
     <div class="flex justify-center" data-aos="zoom-in">
-      <img src="page.jpg" alt="Meriem Louizini"
+      <img src="Page.jpg" alt="Meriem Louizini"
            class="w-80 h-80 object-cover rounded-3xl shadow-2xl border border-slate-700">
     </div>
   </div>
