--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- ABOUT -->
 <section id="about" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    <img src="about.jpg" class="rounded-3xl shadow-xl" data-aos="fade-right">
+    <img src="about.jfif" class="rounded-3xl shadow-xl" data-aos="fade-right">
 
     <div data-aos="fade-left">
       <h2 class="text-4xl font-extrabold mb-6 text-gradient">À propos de moi</h2>
@@ -100,19 +100,19 @@
 
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up">
-      <img src="DEV.jpg" class="rounded-xl mb-4">
+      <img src="DEV.jfif" class="rounded-xl mb-4">
       <h3 class="font-bold text-xl mb-2">Développement</h3>
       <p class="text-slate-400 text-sm">HTML, CSS, JavaScript, PHP, Java, SQL</p>
     </div>
 
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="100">
-      <img src="IA.jpg" class="rounded-xl mb-4">
+      <img src="IA.jfif" class="rounded-xl mb-4">
       <h3 class="font-bold text-xl mb-2">IA & Data</h3>
       <p class="text-slate-400 text-sm">CNN, GAN, Python, Big Data, MapReduce</p>
     </div>
 
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="200">
-      <img src="Miage.jpg" class="rounded-xl mb-4">
+      <img src="Miage.jfif" class="rounded-xl mb-4">
       <h3 class="font-bold text-xl mb-2">MIAGE & Gestion</h3>
       <p class="text-slate-400 text-sm">Analyse des besoins, logique métier, collaboration</p>
     </div>
