--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
   <h3 class="text-3xl font-extrabold text-gradient mb-6">Contact</h3>
   <div class="flex justify-center gap-8 text-xl">
     <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-400"><i class="fas fa-envelope"></i></a>
-    <a href="https://github.com" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/MeryOuma-inf" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
+    <a href="www.linkedin.com/in/meriem-l" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
   </div>
 </footer>
 
