--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meriem Louizini | Portfolio</title>
 
-  
-
   <!-- Fonts & Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -59,7 +57,7 @@
         Étudiante en Licence 3 Informatique à Mulhouse.  
         Passionnée par le développement, l’IA et les systèmes concrets orientés métier.
       </p>
-      <div class="flex gap-4">
+      <div class="flex gap-4 flex-wrap">
         <a href="#projects" class="bg-emerald-500 text-slate-900 px-6 py-3 rounded-xl font-bold hover:scale-105 transition">
           Voir mes projets
         </a>
@@ -79,7 +77,7 @@
 <!-- ABOUT -->
 <section id="about" class="py-24 px-6 bg-slate-900">
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-    <img src="about.jfif" class="rounded-3xl shadow-xl" data-aos="fade-right">
+    <img src="about.jfif" class="rounded-3xl shadow-xl w-80 h-80 object-cover" data-aos="fade-right">
 
     <div data-aos="fade-left">
       <h2 class="text-4xl font-extrabold mb-6 text-gradient">À propos de moi</h2>
@@ -100,19 +98,19 @@
 
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up">
-      <img src="DEV.jfif" class="rounded-xl mb-4">
+      <img src="DEV.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
       <h3 class="font-bold text-xl mb-2">Développement</h3>
       <p class="text-slate-400 text-sm">HTML, CSS, JavaScript, PHP, Java, SQL</p>
     </div>
 
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="100">
-      <img src="IA.jfif" class="rounded-xl mb-4">
+      <img src="IA.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
       <h3 class="font-bold text-xl mb-2">IA & Data</h3>
       <p class="text-slate-400 text-sm">CNN, GAN, Python, Big Data, MapReduce</p>
     </div>
 
     <div class="glass p-6 rounded-2xl text-center" data-aos="fade-up" data-aos-delay="200">
-      <img src="Miage.jfif" class="rounded-xl mb-4">
+      <img src="Miage.jfif" class="rounded-xl mb-4 w-64 h-64 object-cover">
       <h3 class="font-bold text-xl mb-2">MIAGE & Gestion</h3>
       <p class="text-slate-400 text-sm">Analyse des besoins, logique métier, collaboration</p>
     </div>
@@ -147,7 +145,7 @@
   <div class="flex justify-center gap-8 text-xl">
     <a href="mailto:louizmeriem1@gmail.com" class="hover:text-emerald-400"><i class="fas fa-envelope"></i></a>
     <a href="https://github.com/MeryOuma-inf" class="hover:text-emerald-400"><i class="fab fa-github"></i></a>
-    <a href="www.linkedin.com/in/meriem-l" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/meriem-l" class="hover:text-emerald-400"><i class="fab fa-linkedin"></i></a>
   </div>
 </footer>
 
@@ -156,6 +154,3 @@
 
 </body>
 </html>
-
-
-
